The first index of getelementptr is for the case when the pointer is to an array